added transitions to bottom row

--- a/scss/board.scss
+++ b/scss/board.scss
@@ -333,10 +333,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/yellow1.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
@@ -347,10 +347,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/yellow2.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
@@ -361,10 +361,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/yellow3.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
@@ -375,10 +375,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/chance_tile2.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
@@ -389,10 +389,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/red1.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
@@ -403,10 +403,10 @@ nav {
       float: left;
       border: 2px solid black;
       background-image: url(../images/red2.png);
-      transition: .5s;
+      transition: 1s;
       &:hover{
-        -webkit-transform:scale(1.5,1.5);
-        -moz-transform:scale(1.5,1.5);
+        -webkit-transform:scale(1.5,1.5) rotate(360deg);
+        -moz-transform:scale(1.5,1.5) rotate(360deg);
 
 
       }
