--- a/css/board.css
+++ b/css/board.css
@@ -30,7 +30,8 @@ nav ul {
     background-image: url(../images/purple1.png);
     transition: .5s; }
     #board_full ul > li #top_row1:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row2 {
     width: 112px;
     height: 224px;
@@ -39,7 +40,8 @@ nav ul {
     background-image: url(../images/purple2.png);
     transition: .5s; }
     #board_full ul > li #top_row2:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row3 {
     width: 112px;
     height: 224px;
@@ -48,7 +50,8 @@ nav ul {
     background-image: url(../images/MTA.png);
     transition: .5s; }
     #board_full ul > li #top_row3:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row4 {
     width: 112px;
     height: 224px;
@@ -57,7 +60,8 @@ nav ul {
     background-image: url(../images/babyblue1.png);
     transition: .5s; }
     #board_full ul > li #top_row4:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row5 {
     width: 112px;
     height: 224px;
@@ -66,7 +70,8 @@ nav ul {
     background-image: url(../images/chance_tile.png);
     transition: .5s; }
     #board_full ul > li #top_row5:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row6 {
     width: 112px;
     height: 224px;
@@ -75,7 +80,8 @@ nav ul {
     background-image: url(../images/babyblue2.png);
     transition: .5s; }
     #board_full ul > li #top_row6:hover {
-      -webkit-transform: rotate(180deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(180deg) scale(1.5, 1.5);
+      -moz-transform: rotate(180deg) scale(1.5, 1.5); }
   #board_full ul > li #top_row_right {
     width: 224px;
     height: 224px;
@@ -90,7 +96,8 @@ nav ul {
     background-image: url(../images/blue1.png);
     transition: .5s; }
     #board_full ul > li #first_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #first_row_right {
     width: 224px;
     height: 112px;
@@ -99,7 +106,8 @@ nav ul {
     background-image: url(../images/pink1.png);
     transition: .5s; }
     #board_full ul > li #first_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #second_row_left {
     width: 224px;
     height: 112px;
@@ -108,7 +116,8 @@ nav ul {
     background-image: url(../images/community_tile2.png);
     transition: .5s; }
     #board_full ul > li #second_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #second_row_right {
     width: 224px;
     height: 112px;
@@ -117,7 +126,8 @@ nav ul {
     background-image: url(../images/MTA2.png);
     transition: .5s; }
     #board_full ul > li #second_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #third_row_left {
     width: 224px;
     height: 112px;
@@ -126,7 +136,8 @@ nav ul {
     background-image: url(../images/blue2.png);
     transition: .5s; }
     #board_full ul > li #third_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #third_row_right {
     width: 224px;
     height: 112px;
@@ -135,7 +146,8 @@ nav ul {
     background-image: url(../images/pink3.png);
     transition: .5s; }
     #board_full ul > li #third_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #fourth_row_left {
     width: 224px;
     height: 112px;
@@ -144,7 +156,8 @@ nav ul {
     background-image: url(../images/green1.png);
     transition: .5s; }
     #board_full ul > li #fourth_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #fourth_row_right {
     width: 224px;
     height: 112px;
@@ -153,7 +166,8 @@ nav ul {
     background-image: url(../images/orange1.png);
     transition: .5s; }
     #board_full ul > li #fourth_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #fifth_row_left {
     width: 224px;
     height: 112px;
@@ -162,7 +176,8 @@ nav ul {
     background-image: url(../images/green2.png);
     transition: .5s; }
     #board_full ul > li #fifth_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #fifth_row_right {
     width: 224px;
     height: 112px;
@@ -171,7 +186,8 @@ nav ul {
     background-image: url(../images/community_tile.png);
     transition: .5s; }
     #board_full ul > li #fifth_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #sixth_row_left {
     width: 224px;
     height: 112px;
@@ -180,7 +196,8 @@ nav ul {
     background-image: url(../images/green3.png);
     transition: .5s; }
     #board_full ul > li #sixth_row_left:hover {
-      -webkit-transform: rotate(-90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(-90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(-90deg) scale(1.5, 1.5); }
   #board_full ul > li #sixth_row_right {
     width: 224px;
     height: 112px;
@@ -189,7 +206,8 @@ nav ul {
     background-image: url(../images/orange2.png);
     transition: .5s; }
     #board_full ul > li #sixth_row_right:hover {
-      -webkit-transform: rotate(90deg) scale(1.5, 1.5); }
+      -webkit-transform: rotate(90deg) scale(1.5, 1.5);
+      -moz-transform: rotate(90deg) scale(1.5, 1.5); }
   #board_full ul > li #bottom_row_left {
     width: 224px;
     height: 224px;
@@ -201,49 +219,61 @@ nav ul {
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/yellow1.png); }
+    background-image: url(../images/yellow1.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row1:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row2 {
     width: 112px;
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/yellow2.png); }
+    background-image: url(../images/yellow2.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row2:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row3 {
     width: 112px;
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/yellow3.png); }
+    background-image: url(../images/yellow3.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row3:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row4 {
     width: 112px;
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/chance_tile2.png); }
+    background-image: url(../images/chance_tile2.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row4:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row5 {
     width: 112px;
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/red1.png); }
+    background-image: url(../images/red1.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row5:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row6 {
     width: 112px;
     height: 224px;
     float: left;
     border: 2px solid black;
-    background-image: url(../images/red2.png); }
+    background-image: url(../images/red2.png);
+    transition: 1s; }
     #board_full ul > li #bottom_row6:hover {
-      -webkit-transform: scale(1.5, 1.5); }
+      -webkit-transform: scale(1.5, 1.5) rotate(360deg);
+      -moz-transform: scale(1.5, 1.5) rotate(360deg); }
   #board_full ul > li #bottom_row_right {
     width: 224px;
     height: 224px;
