--- a/css/pieces.css
+++ b/css/pieces.css
@@ -7,61 +7,35 @@ h1 {
   background-image: linear-gradient(bottom, #ca2a2d 0%, #8f1d1f 100%);
   color: white; }
 
-.cont_left {
-  display: block;
+.outside_image {
+  width: 420px;
+  height: 500px;
+  border: 4px solid black;
+  text-align: center;
   float: left;
-  width: 400px;
-  text-align: center;
-  vertical-align: center;
-  margin-left: 40px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  font-size: 12px; }
-  .cont_left .img_cont {
-    height: 300px;
-    border: 2px solid red;
-    margin-top: 5px; }
-    .cont_left .img_cont p {
-      width: 400px; }
+  margin: 26px; }
+  .outside_image h2 {
+    width: 376px;
+    border: 2px solid black;
+    background: red;
+    margin: 10px; }
+  .outside_image .inside_image {
+    width: 396px;
+    height: 476px;
+    margin: 10px;
+    border: 2px solid black; }
+  .outside_image:hover {
+    transform: translateZ(170px);
+    -ms-transform: translateZ(170px);
+    -webkit-transform: translateZ(170px); }
 
-.cont_right {
-  display: block;
-  float: right;
-  width: 400px;
-  text-align: center;
-  vertical-align: center;
-  margin-right: 40px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  font-size: 12px; }
-  .cont_right .img_cont {
-    height: 300px;
-    border: 2px solid red;
-    margin-top: 5px; }
-    .cont_right .img_cont p {
-      width: 400px; }
+#ship {
+  margin: 10px 266px; }
 
-.cont_horizontal {
-  font-size: 12px; }
-  .cont_horizontal .img_horizontal {
-    width: 314px;
-    height: 275px;
-    border: 2px solid red;
-    float: right;
-    text-align: center;
-    margin-right: 1px; }
+#ship:hover {
+  transform: translateZ(170px);
+  -ms-transform: translateZ(170px);
+  -webkit-transform: translateZ(170px); }
 
 .clear {
   clear: both; }
-
-#outside_wrapper #wrapper #main .cont_left img {
-  width: 200px;
-  height: auto; }
-
-#outside_wrapper #wrapper #main .cont_right .img_cont img {
-  width: 200px;
-  height: auto; }
-
-#outside_wrapper #wrapper #main .cont_horizontal img {
-  width: 200px;
-  height: auto; }
