--- a/html/pieces.haml
+++ b/html/pieces.haml
@@ -32,62 +32,50 @@
       #wrapper
         #main
           %h1 Game Pieces
-          .cont_left
-            .img_cont
-              #img1
-                %img{src: '../images/token_barrow.png'}
-                %p
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, magni iusto omnis expedita reprehenderit excepturi unde qui aut voluptas quas! Impedit, dolore iste molestias maiores cumque quia modi quae laborum!
-            .img_cont
-              #img2
-                %img{src: '../images/token_boot.png'}
-                %p
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-          .cont_right
-            .img_cont
-              #img3
-                %img{src: '../images/token_car.png'}
-                %p
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-            #cowboy
-              .img_cont
-                #img4
-                  %img{src: '../images/token_cowboy.png'}
-                  %p
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-          .clear
-
-          .cont_horizontal
-            .img_horizontal
+          .outside_image
+            .inside_image
+              %h2 Wheelbarrow
+              %img{src: '../images/token_barrow.png'}
+              %p
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, magni iusto omnis expedita reprehenderit excepturi unde qui aut voluptas quas! Impedit, dolore iste molestias maiores cumque quia modi quae laborum!
+          .outside_image
+            .inside_image
+              %h2 Boot
+              %img{src: '../images/token_boot.png'}
+              %p
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
+          .outside_image
+            .inside_image
+              %h2 Car
+              %img{src: '../images/token_car.png'}
+              %p
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
+          .outside_image
+            .inside_image
+              %h2 Dog
               %img{src: '../images/token_dog.png'}
               %p
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-
-            .img_horizontal
+          .outside_image
+            .inside_image
+              %h2 Top Hat
               %img{src: '../images/token_hat.png'}
               %p
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-
-            .img_horizontal
+          .outside_image
+            .inside_image
+              %h2 Iron
               %img{src: '../images/token_iron.png'}
               %p
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-          .clear
-
-          .cont_left
-            .img_cont
-              %img{src: '../images/token_thimble.png'}
-              %p
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          .cont_right
-            .img_cont
-              %img{src: '../images/token_ship.png'}
-              %p
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, praesentium, sunt, provident in minus laborum quibusdam natus nihil consectetur eaque assumenda nesciunt fuga illo voluptatem neque beatae aut facere architecto!
-
-          .clear
-
-
+          #ship
+            .outside_image
+              .inside_image
+                %h2 Battleship
+                %img{src: '../images/token_ship.png'}
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, praesentium, sunt, provident in minus laborum quibusdam natus nihil consectetur eaque assumenda nesciunt fuga illo voluptatem neque beatae aut facere architecto!
+        .clear
 
 
     %footer
