--- a/scss/pieces.scss
+++ b/scss/pieces.scss
@@ -10,106 +10,44 @@ h1 {
 
     color: white;
 
-
 }
-.cont_left {
-  display: block;
+
+.outside_image {
+  width: 420px;
+  height: 500px;
+  border: 4px solid black;
+  text-align: center;
   float: left;
-  width: 400px;
-  text-align: center;
-  vertical-align: center;
-  margin-left: 40px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  font-size: 12px;
-  .img_cont {
-    height: 300px;
-    border: 2px solid red;
-    margin-top: 5px;
-    p {
-      width: 400px;
-    }
+  margin: 26px;
+  h2 {
+    width: 376px;
+    border: 2px solid black;
+    background: red;
+    margin: 10px;
   }
+  .inside_image {
+    width: 396px;
+    height: 476px;
+    margin: 10px;
+    border: 2px solid black;
+  }
+  &:hover {
+    transform:translateZ(170px);
+    -ms-transform:translateZ(170px);
+    -webkit-transform:translateZ(170px);
+  }
+
 }
 
-
-.cont_right {
-  display: block;
-  float: right;
-  width: 400px;
-  text-align: center;
-  vertical-align: center;
-  margin-right: 40px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  font-size: 12px;
-  .img_cont {
-    height: 300px;
-    border: 2px solid red;
-    margin-top: 5px;
-    p {
-      width: 400px;
-    }
+  #ship {
+    margin: 10px 266px;
   }
-}
-
-.cont_horizontal {
-  font-size: 12px;
-  .img_horizontal {
-    width: 314px;
-    height: 275px;
-    border: 2px solid red;
-    float: right;
-    text-align: center;
-    margin-right: 1px;
+#ship:hover {
+    transform:translateZ(170px);
+    -ms-transform:translateZ(170px);
+    -webkit-transform:translateZ(170px);
   }
-}
-
-
-
 
 .clear {
   clear: both;
 }
-
-#outside_wrapper {
-    #wrapper {
-      #main {
-        .cont_left {
-          img {
-            width: 200px;
-            height: auto;
-          }
-        }
-      }
-    }
-  }
-
-#outside_wrapper {
-    #wrapper {
-      #main {
-        .cont_right {
-          .img_cont {
-          img {
-            width: 200px;
-            height: auto;
-          }
-          }
-        }
-      }
-    }
-  }
-
-#outside_wrapper {
-    #wrapper {
-      #main {
-        .cont_horizontal {
-          img {
-            width: 200px;
-            height: auto;
-          }
-        }
-      }
-    }
-  }
-
