--- a/css/pieces.css
+++ b/css/pieces.css
@@ -13,7 +13,7 @@ h1 {
   border: 4px solid black;
   text-align: center;
   float: left;
-  margin: 26px; }
+  margin: 40px 26px; }
   .outside_image h2 {
     width: 376px;
     border: 2px solid black;
@@ -25,17 +25,11 @@ h1 {
     margin: 10px;
     border: 2px solid black; }
   .outside_image:hover {
-    transform: translateZ(170px);
-    -ms-transform: translateZ(170px);
-    -webkit-transform: translateZ(170px); }
+    -webkit-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.2, 1.2); }
 
 #ship {
   margin: 10px 266px; }
-
-#ship:hover {
-  transform: translateZ(170px);
-  -ms-transform: translateZ(170px);
-  -webkit-transform: translateZ(170px); }
 
 .clear {
   clear: both; }
